force-app/main/default/objects/Quality_Control__c/Quality_Control__c.object-meta.xml
<CustomObject>
    <label>Quality Control</label>
    <nameField>
        <displayFormat>QC-{00000000}</displayFormat>
        <label>Quality Control Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Control</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>