force-app/main/default/objects/Quality_Control__c/fields/Are_cabinets_level_and_square__c.field-meta.xml
<CustomField>
    <fullName>Are_cabinets_level_and_square__c</fullName>
    <label>Are cabinets level and square?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Please select a value</fullName>
                <isActive>false</isActive>
                <label>Please select a value</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>