force-app/main/default/objects/Quality_Control__c/fields/Are_Tubs_in_Good_Condition__c.field-meta.xml
<CustomField>
    <fullName>Are_Tubs_in_Good_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tubs should have no chips or trash in them. Document any problems.</inlineHelpText>
    <label>Are Tub(s) in Good Condition?</label>
    <type>Checkbox</type>
</CustomField>