force-app/main/default/objects/Quality_Control__c/fields/Areanyareasdamaged__c.field-meta.xml
<CustomField>
    <fullName>Areanyareasdamaged__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Are any areas damaged?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>