force-app/main/default/objects/Quality_Control__c/fields/Backsplash_Notes__c.field-meta.xml
<CustomField>
    <fullName>Backsplash_Notes__c</fullName>
    <label>Backsplash Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>