force-app/main/default/objects/Quality_Control__c/fields/Backsplash_ran_to_edge_of_counter_top__c.field-meta.xml
<CustomField>
    <fullName>Backsplash_ran_to_edge_of_counter_top__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Backsplash ran to edge of counter top</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>