force-app/main/default/objects/Quality_Control__c/fields/Bathroom_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bathroom_Notes__c</fullName>
    <label>Bathroom Notes</label>
    <type>TextArea</type>
</CustomField>