force-app/main/default/objects/Quality_Control__c/fields/Builder__c.field-meta.xml
<CustomField>
    <fullName>Builder__c</fullName>
    <formula>House_Unit__r.Community__r.Builder__r.Name</formula>
    <label>Builder</label>
    <type>Text</type>
</CustomField>