force-app/main/default/objects/Quality_Control__c/fields/Builder_Spec_Notes__c.field-meta.xml
<CustomField>
    <fullName>Builder_Spec_Notes__c</fullName>
    <label>Builder Spec Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>