force-app/main/default/objects/Quality_Control__c/fields/Cabinet_Condition_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Condition_Notes__c</fullName>
    <label>Cabinet Condition Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>