force-app/main/default/objects/Quality_Control__c/fields/Cabinet_Installation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Installation_Notes__c</fullName>
    <label>Cabinet Installation Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>