force-app/main/default/objects/Quality_Control__c/fields/Cabinets_counter_tops_sink_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cabinets_counter_tops_sink_Notes__c</fullName>
    <label>Cabinets, counter tops &amp; sink Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>