force-app/main/default/objects/Quality_Control__c/fields/Cabinets_level_and_square_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cabinets_level_and_square_Notes__c</fullName>
    <label>Cabinets level and square Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>