force-app/main/default/objects/Quality_Control__c/fields/Case_Billing_Info__c.field-meta.xml
<CustomField>
    <fullName>Case_Billing_Info__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Case Billing Info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Installer Back Charge</fullName>
            </value>
            <value>
                <fullName>Manufacturer Claim</fullName>
            </value>
            <value>
                <fullName>TBD - Billing</fullName>
            </value>
            <value>
                <fullName>Builder Accommodation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>