force-app/main/default/objects/Quality_Control__c/fields/Caulk_all_doorways_touching_tile__c.field-meta.xml
<CustomField>
    <fullName>Caulk_all_doorways_touching_tile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caulk all doorways touching tile</label>
    <type>Checkbox</type>
</CustomField>