force-app/main/default/objects/Quality_Control__c/fields/Caulk_back_splash__c.field-meta.xml
<CustomField>
    <fullName>Caulk_back_splash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caulk back splash</label>
    <type>Checkbox</type>
</CustomField>