force-app/main/default/objects/Quality_Control__c/fields/Caulk_cabinets_to_tile_when_no_shoemold__c.field-meta.xml
<CustomField>
    <fullName>Caulk_cabinets_to_tile_when_no_shoemold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caulk cabinets to tile when no shoemold</label>
    <type>Checkbox</type>
</CustomField>