force-app/main/default/objects/Quality_Control__c/fields/Caulk_fireplace__c.field-meta.xml
<CustomField>
    <fullName>Caulk_fireplace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caulk fireplace</label>
    <type>Checkbox</type>
</CustomField>