force-app/main/default/objects/Quality_Control__c/fields/Caulk_shower_walls__c.field-meta.xml
<CustomField>
    <fullName>Caulk_shower_walls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caulk shower walls</label>
    <type>Checkbox</type>
</CustomField>