force-app/main/default/objects/Quality_Control__c/fields/Caulk_tubs_curbs_shower_skirts_at_floor__c.field-meta.xml
<CustomField>
    <fullName>Caulk_tubs_curbs_shower_skirts_at_floor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caulk tubs/curbs/shower skirts at floor</label>
    <type>Checkbox</type>
</CustomField>