force-app/main/default/objects/Quality_Control__c/fields/Check_fill_all_pin_holes_grouted_areas__c.field-meta.xml
<CustomField>
    <fullName>Check_fill_all_pin_holes_grouted_areas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check &amp; fill all pin holes/grouted areas</label>
    <type>Checkbox</type>
</CustomField>