force-app/main/default/objects/Quality_Control__c/fields/Check_Slab_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Check_Slab_Tolerance__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Check Slab Tolerance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Needs Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>