force-app/main/default/objects/Quality_Control__c/fields/Check_Walls_for_Plumb__c.field-meta.xml
<CustomField>
    <fullName>Check_Walls_for_Plumb__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Check Walls for Plumb</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Needs Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>