force-app/main/default/objects/Quality_Control__c/fields/Chipped_tile_Notes__c.field-meta.xml
<CustomField>
    <fullName>Chipped_tile_Notes__c</fullName>
    <label>Chipped tile Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>