force-app/main/default/objects/Quality_Control__c/fields/Chipped_tiles_at_cut_edges__c.field-meta.xml
<CustomField>
    <fullName>Chipped_tiles_at_cut_edges__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Chipped tiles at cut edges?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>