force-app/main/default/objects/Quality_Control__c/fields/Clean_free_of_glue_Notes__c.field-meta.xml
<CustomField>
    <fullName>Clean_free_of_glue_Notes__c</fullName>
    <label>Clean &amp; free of glue Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>