force-app/main/default/objects/Quality_Control__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Inspection Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>