force-app/main/default/objects/Quality_Control__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <formula>House_Unit__r.Community__r.Name</formula>
    <label>Community</label>
    <type>Text</type>
</CustomField>