force-app/main/default/objects/Quality_Control__c/fields/Confirm_of_Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Confirm_of_Bathrooms__c</fullName>
    <label>Confirm # of Bathrooms</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>