force-app/main/default/objects/Quality_Control__c/fields/Confirm_of_Mud_Bottom_Showers__c.field-meta.xml
<CustomField>
    <fullName>Confirm_of_Mud_Bottom_Showers__c</fullName>
    <label>Confirm # of Mud Bottom Showers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>