force-app/main/default/objects/Quality_Control__c/fields/Corbel_Notes__c.field-meta.xml
<CustomField>
    <fullName>Corbel_Notes__c</fullName>
    <label>Corbel Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>