force-app/main/default/objects/Quality_Control__c/fields/Countertop_Notes__c.field-meta.xml
<CustomField>
    <fullName>Countertop_Notes__c</fullName>
    <label>Countertop Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>