force-app/main/default/objects/Quality_Control__c/fields/Cuts_around_windows_sills_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cuts_around_windows_sills_Notes__c</fullName>
    <label>Cuts around windows &amp; sills Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>