force-app/main/default/objects/Quality_Control__c/fields/Cuts_neat_clean_around_windows_sills__c.field-meta.xml
<CustomField>
    <fullName>Cuts_neat_clean_around_windows_sills__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Cuts neat &amp; clean around windows &amp; sills</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>