force-app/main/default/objects/Quality_Control__c/fields/Cuts_tight_around_plugs__c.field-meta.xml
<CustomField>
    <fullName>Cuts_tight_around_plugs__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Cuts tight around plugs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>