force-app/main/default/objects/Quality_Control__c/fields/Damage_cabinets_doors_walls__c.field-meta.xml
<CustomField>
    <fullName>Damage_cabinets_doors_walls__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <inlineHelpText>If Yes attach pic</inlineHelpText>
    <label>Damage cabinets, doors, walls?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>