force-app/main/default/objects/Quality_Control__c/fields/Damage_to_baseboards__c.field-meta.xml
<CustomField>
    <fullName>Damage_to_baseboards__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Damage to baseboards?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>