force-app/main/default/objects/Quality_Control__c/fields/Damage_to_cabinets_doors_walls_Notes__c.field-meta.xml
<CustomField>
    <fullName>Damage_to_cabinets_doors_walls_Notes__c</fullName>
    <label>Damage to cabinets, doors, walls Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>