force-app/main/default/objects/Quality_Control__c/fields/Damage_to_tubs_pans_Notes__c.field-meta.xml
<CustomField>
    <fullName>Damage_to_tubs_pans_Notes__c</fullName>
    <inlineHelpText>Confirm there are no chips/trash</inlineHelpText>
    <label>Damage to tubs &amp; pans Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>