force-app/main/default/objects/Quality_Control__c/fields/Deco_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deco_Notes__c</fullName>
    <label>Deco Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>