force-app/main/default/objects/Quality_Control__c/fields/DELETE__c.field-meta.xml
<CustomField>
    <fullName>DELETE__c</fullName>
    <formula>TEXT(Work_Order__r.Work_Order_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DELETE</label>
    <type>Text</type>
</CustomField>