force-app/main/default/objects/Quality_Control__c/fields/Did_we_meet_builder_specifications__c.field-meta.xml
<CustomField>
    <fullName>Did_we_meet_builder_specifications__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <inlineHelpText>Answering &quot;No&quot; will generate a Case to Customer Service</inlineHelpText>
    <label>Did we meet builder specifications?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>