force-app/main/default/objects/Quality_Control__c/fields/Dishwasher_clips_builder_req_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dishwasher_clips_builder_req_Notes__c</fullName>
    <label>Dishwasher clips/builder req Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>