force-app/main/default/objects/Quality_Control__c/fields/Dishwasher_clips_builder_requirements__c.field-meta.xml
<CustomField>
    <fullName>Dishwasher_clips_builder_requirements__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <inlineHelpText>Does the dishwasher have clips/builder requirements?</inlineHelpText>
    <label>Dishwasher clips/builder requirements?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>