force-app/main/default/objects/Quality_Control__c/fields/Do_they_have_heat_temp_or_permanent__c.field-meta.xml
<CustomField>
    <fullName>Do_they_have_heat_temp_or_permanent__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Is climate control on?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>