force-app/main/default/objects/Quality_Control__c/fields/Does_it_need_an_inspection_by_county__c.field-meta.xml
<CustomField>
    <fullName>Does_it_need_an_inspection_by_county__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Does it need an inspection by County?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>