force-app/main/default/objects/Quality_Control__c/fields/Does_job_meet_industry_standards__c.field-meta.xml
<CustomField>
    <fullName>Does_job_meet_industry_standards__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Do you approve of this installation?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>