force-app/main/default/objects/Quality_Control__c/fields/Does_Shower_Bath_Need_Field_Measure__c.field-meta.xml
<CustomField>
    <fullName>Does_Shower_Bath_Need_Field_Measure__c</fullName>
    <inlineHelpText>Verify the shower &amp; bath configurations. Provide detail measurement for each shower/bath.</inlineHelpText>
    <label>Does Shower/Bath Need Field Measure?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Please select a value</fullName>
                <isActive>false</isActive>
                <label>Please select a value</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>