force-app/main/default/objects/Quality_Control__c/fields/Does_the_sink_have_clips__c.field-meta.xml
<CustomField>
    <fullName>Does_the_sink_have_clips__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Does the sink have clips?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>