force-app/main/default/objects/Quality_Control__c/fields/Door_jambs_Notes__c.field-meta.xml
<CustomField>
    <fullName>Door_jambs_Notes__c</fullName>
    <label>Door jambs Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>