force-app/main/default/objects/Quality_Control__c/fields/Door_jambs_under_cut__c.field-meta.xml
<CustomField>
    <fullName>Door_jambs_under_cut__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Door jambs under cut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>