force-app/main/default/objects/Quality_Control__c/fields/Doors_rehung_hinge_pins_door_stops__c.field-meta.xml
<CustomField>
    <fullName>Doors_rehung_hinge_pins_door_stops__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Doors rehung, hinge pins &amp; door stops</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>