force-app/main/default/objects/Quality_Control__c/fields/Doors_rehung_install_Notes__c.field-meta.xml
<CustomField>
    <fullName>Doors_rehung_install_Notes__c</fullName>
    <label>Doors rehung &amp; install Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>