force-app/main/default/objects/Quality_Control__c/fields/Electrical_cord_Notes__c.field-meta.xml
<CustomField>
    <fullName>Electrical_cord_Notes__c</fullName>
    <label>Electrical cord Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>