force-app/main/default/objects/Quality_Control__c/fields/Electrical_cords_in_good_working_order__c.field-meta.xml
<CustomField>
    <fullName>Electrical_cords_in_good_working_order__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Electrical cords in good working order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>